<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InitiativePicker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="btn_submit">Submit</string>
    <string name="btn_view_initiatives">View Initiatives</string>
    <string name="btn_view_parties">View Parties</string>
    
    <string name="label_character_defense">Defense</string>
    <string name="label_character_initiative">Initiative</string>
    <string name="label_character_initiative_mod">Initiative Modifier</string>
    <string name="label_character_name">Name</string>
    <string name="label_character_player_name">Player Name</string>
    <string name="label_character_type">Player Character?</string>
    <string name="label_encounter_name">Encounter Name</string>
    <string name="label_encounter_party">Party</string>
    
    <string name="message_empty_list">There are no Character initiatives to view.</string>
    <string name="message_character_deleted">Character deleted.</string>
    <string name="message_encounter_name">You must enter a Name</string>
    <string name="message_encounter_party">You must select a Party</string>
    <string name="message_loading_characters">Loading Characters</string>
    <string name="message_please_wait">Please wait...</string>
    
    <string name="menu_delete_character">Delete Character</string>
 	<string name="menu_edit_character">Edit Character</string>
 	    
    <string name="text_encounter_party">Encounter Party</string>

</resources>
