<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/label_character_name" />
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/characterName" 
        android:inputType="text" />
    
    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/label_player_name" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerName" />-->
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_character_initiative" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/initiative" 
        android:inputType="number" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_character_initiative_mod" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/initiative_mod"
        android:inputType="number" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_character_defense" />
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/defense"
        android:inputType="number" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/characterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_character_type" />

    </LinearLayout>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitCharacter"
        android:text="@string/btn_submit" 
        android:onClick = "submitCharacter" />
    
    
</LinearLayout>